final draft done

--- a/final_report.tex
+++ b/final_report.tex
@@ -256,7 +256,7 @@ Tour & Best Greedy Distance & Total Duration(seconds) \\
  2-OPT algorithm performed well in the competition cases in terms of runtime. All cases were computed in under one minute, and first five cases were under one second. We are confident that it would perform well in terms of approximation ratio based on the example cases. 
 
 \section*{Conclusion}
-TSP is an NP-complete problem which poses a challenge for finding an optimal solution. TSP has applications in many domains including route planning, manufacturing, and in biology etc. Therefore an approximation algorithm that can provide a close enough approximation to the optimal solution is very valuable. In our research, we investigated three algorithms including Minimum Spanning Tree, Ant Colony, and Nearest Neighbor with 2-OPT optimization. We chose 2-OPT as the algorithm to implement due to its simple implementation. The algorithm performed very well in both the example and competition cases. All tour were computed within a reasonable timeframe and the approximation ratios were all less than 1.25 for the example cases. For our future studies, we would like to investigate more sophistic algorithms that could further improve approximation ratio.                   
+TSP is an NP-complete problem which poses a challenge for finding an optimal solution. TSP has applications in many domains including route planning, manufacturing, and biology in DNA sequencing etc. Therefore an approximation algorithm that can provide a close enough approximation to the optimal solution is very valuable. In our research, we investigated three algorithms including Minimum Spanning Tree, Ant Colony, and Nearest Neighbor with 2-OPT optimization. We chose 2-OPT as the algorithm to implement due to its simple implementation. The algorithm performed very well in both the example and competition cases. All tour were computed within a reasonable timeframe and the approximation ratios were all less than 1.25 for the example cases. For our future studies, we would like to investigate more sophistic algorithms that could further improve approximation ratio.                   
 \nocite{*}
 \medskip
 \bibliographystyle{plain}
