--- a/final_report.tex
+++ b/final_report.tex
@@ -48,8 +48,8 @@ basicstyle=\fontsize{11}{13}\selectfont\ttfamily
 
 %\renewcommand{\qedsymbol}{\filledbox}
 
-\title{CS325 Final Project Report}%replace X with the appropriate number
-\author{Nathan Perkins, Eric Newton, Ziwei Wu} %replace with your name
+\title{TSP Project Report}%replace X with the appropriate number
+\author{Nathan Perkins, Eric Newton, Ziwei Wu\\\\CS325} %replace with your name
  %if necessary, replace with your course title
 \maketitle
 \section*{Introduction}
